Add 'that' to words that can be assigned 'this'

--- a/.jscsrc
+++ b/.jscsrc
@@ -111,7 +111,7 @@
     "beforeOpeningRoundBrace": true,
     "beforeOpeningCurlyBrace": true
   },
-  "safeContextKeyword": ["self"],
+  "safeContextKeyword": ["self", "that"],
   "validateIndentation": 2,
   "validateQuoteMarks": "'",
   "validateParameterSeparator": ", "
