Requiring a space after the function keyword is a redundnant rule

--- a/.jscsrc
+++ b/.jscsrc
@@ -70,8 +70,7 @@
     "while",
     "with",
     "return",
-    "typeof",
-    "function"
+    "typeof"
   ],
   "requireSpaceAfterLineComment": true,
   "requireSpaceBeforeBinaryOperators": [
