--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "webdriverio": "2.3.0"
   },
   "devDependencies": {
-    "bower": "~1.3.9",
+    "bower": "^1.3.12",
     "chai": "^1.9.2",
     "chai-as-promised": "^4.1.1",
     "glob": "^4.2.1",
