--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2160,6 +2160,23 @@ headerH6Format:
     - "content"
   options:
     selector: "h6"
+headerTooLong:
+  type: "custom"
+  testability: 1
+  title:
+    en: "Header text is too long"
+    nl: "-- missing translation --"
+  description:
+    en: "Headers should not contain too long text as they're designed to show document structure. Users will often skim document only by its headings."
+    nl: "-- missing translation --"
+  guidelines:
+    wcag:
+      1.3.1:
+        techniques:
+          - "H42"
+  tags:
+    - "content"
+  callback: "headerTooLong"
 headersHaveText:
   type: "placeholder"
   testability: 1
