Disallow multiple spaces with JSCS

--- a/.jscsrc
+++ b/.jscsrc
@@ -2,6 +2,7 @@
   "disallowKeywords": ["with"],
   "disallowMixedSpacesAndTabs": true,
   "disallowMultipleLineBreaks": true,
+  "disallowMultipleSpaces": true,
   "disallowNewlineBeforeBlockStatements": true,
   "disallowQuotedKeysInObjects": "allButReserved",
   "disallowSpaceAfterObjectKeys": true,
