--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -3499,29 +3499,29 @@ radioMarkedWithFieldgroupAndLegend:
   tags:
     - "form"
     - "content"
-scriptFocusIndicatorVisible:
-  type: "custom"
-  title:
-    en: "Script focus indicators have high visibility"
-    nl: "Script focus indicatoren zijn goed zichtbaar"
-  description:
-    en: "When a focus indicator is used with script, it should have enough contrast with the background and big enough to be highly visible."
-    nl: "Wanneer je een focus indicator gebruikt met script, moet het contrast tussen de indicator en de achtergrond groot genoeg zijn in verband met de zichtbaarheid."
-  guidelines:
-    wcag:
-      2.4.7:
-        techniques:
-          - "C15"
-          - "G165"
-          - "G195"
-          - "SCR31"
-  tags:
-    - "focus"
-    - "content"
-  components:
-    - "color"
-    - "convertToPx"
-  callback: "scriptFocusIndicatorVisible"
+# scriptFocusIndicatorVisible:
+#   type: "custom"
+#   title:
+#     en: "Script focus indicators have high visibility"
+#     nl: "Script focus indicatoren zijn goed zichtbaar"
+#   description:
+#     en: "When a focus indicator is used with script, it should have enough contrast with the background and big enough to be highly visible."
+#     nl: "Wanneer je een focus indicator gebruikt met script, moet het contrast tussen de indicator en de achtergrond groot genoeg zijn in verband met de zichtbaarheid."
+#   guidelines:
+#     wcag:
+#       2.4.7:
+#         techniques:
+#           - "C15"
+#           - "G165"
+#           - "G195"
+#           - "SCR31"
+#   tags:
+#     - "focus"
+#     - "content"
+#   components:
+#     - "color"
+#     - "convertToPx"
+#   callback: "scriptFocusIndicatorVisible"
 scriptContentAccessibleWithScriptsTurnedOff:
   testability: 0
   title:
