Don't block requests with header x-request-with just yet
These might be AJAX requests that certain tests are making

--- a/config/config.json
+++ b/config/config.json
@@ -21,8 +21,6 @@
       "application/x-shockwave-flash",
       "application/(ms)?(word|powerpoint|excel)"
     ],
-    "headers": [
-      "X-Requested-With"
-    ]
+    "headers": []
   }
 }
