Fixed jshint and jscs after adding more files to these checks

--- a/.jshintrc
+++ b/.jshintrc
@@ -18,13 +18,23 @@
     "module": true,
     "define": true,
     "chai": true,
-    "__dirname": true
+    "__dirname": true,
+    "global": true,
+    "before": true,
+    "beforeEach": true,
+    "after": true,
+    "afterEach": true,
+    "describe": true,
+    "it": true,
+    "expect": true,
+    "assert": true
   },
   "immed": true,
   "indent": 2,
   "jquery": true,
   "latedef": true,
   "noarg": true,
+  "node": true,
   "smarttabs": true,
   "sub": true,
   "trailing": true,
