--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2018,22 +2018,22 @@ imageMapServerSide:
     - "objects"
     - "iframe"
     - "content"
-imgAltEmptyForDecorativeImages:
-  testability: 0
-  title:
-    en: "If an image is purely decorative, the \"alt\" text must be empty"
-    nl: "Als een afbeelding alleen ter decoratie is, moet de \"alt\"-tekst leeg zijn"
-  description:
-    en: "Any image that is only decorative (serves no function or adds to the purpose of the page content) should have an empty \"alt\" attribute."
-    nl: "Elke afbeelding die alleen ter decoratie is (en die dus geen functie heeft of bijdraagt aan het doel van een contentpagina) moet een leeg \"alt\"-attirbuut hebben."
-  guidelines:
-    wcag:
-      1.3.3:
-        techniques:
-          - "F26"
-  tags:
-    - "image"
-    - "content"
+# imgAltEmptyForDecorativeImages:
+#   testability: 0
+#   title:
+#     en: "If an image is purely decorative, the \"alt\" text must be empty"
+#     nl: "Als een afbeelding alleen ter decoratie is, moet de \"alt\"-tekst leeg zijn"
+#   description:
+#     en: "Any image that is only decorative (serves no function or adds to the purpose of the page content) should have an empty \"alt\" attribute."
+#     nl: "Elke afbeelding die alleen ter decoratie is (en die dus geen functie heeft of bijdraagt aan het doel van een contentpagina) moet een leeg \"alt\"-attirbuut hebben."
+#   guidelines:
+#     wcag:
+#       1.3.3:
+#         techniques:
+#           - "F26"
+#   tags:
+#     - "image"
+#     - "content"
 imgAltIdentifiesLinkDestination:
   testability: 0
   title:
