Knocked out inputDoesNotUseColorAlone

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2379,21 +2379,21 @@ inputCheckboxRequiresFieldset:
     - "form"
     - "content"
   callback: "inputCheckboxRequiresFieldset"
-inputDoesNotUseColorAlone:
-  testability: 0
-  title:
-    en: "An \"input\" element should not use color alone"
-    nl: "Een invoerveld mag niet alleen maar kleur gebruiken"
-  description:
-    en: "All input elements should not refer to content by color alone."
-    nl: "Elk invoerveld moet naar content verwijzen door middel van meer dan alleen kleur."
-  guidelines:
-    508:
-      - "c"
-  tags:
-    - "form"
-    - "color"
-    - "content"
+# inputDoesNotUseColorAlone:
+#   testability: 0
+#   title:
+#     en: "An \"input\" element should not use color alone"
+#     nl: "Een invoerveld mag niet alleen maar kleur gebruiken"
+#   description:
+#     en: "All input elements should not refer to content by color alone."
+#     nl: "Elk invoerveld moet naar content verwijzen door middel van meer dan alleen kleur."
+#   guidelines:
+#     508:
+#       - "c"
+#   tags:
+#     - "form"
+#     - "color"
+#     - "content"
 inputElementsDontHaveAlt:
   testability: 1
   title:
