Knocked out inputImageAltIdentifiesPurpose

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2424,22 +2424,22 @@ inputFileHasTabIndex:
   options:
     attribute: "tabindex"
     empty: true
-inputImageAltIdentifiesPurpose:
-  testability: 0
-  title:
-    en: "All \"input\" elements with a type of \"image\" must have an \"alt\" attribute that describes the function of the input"
-    nl: "Elk \"invoer\"-element met een type \"afbeelding\" moet een \"alt\"-attribuut hebben dat de functie van de invoer beschrijft"
-  description:
-    en: "All <code>input</code> elements with a type of \"image\" should have an \"alt\" attribute."
-    nl: "Elk \"invoer\"-element met een type \"afbeelding\" moet een \"alt\"-attribuut hebben."
-  guidelines:
-    wcag:
-      1.1.1:
-        techniques:
-          - "H36"
-  tags:
-    - "form"
-    - "content"
+# inputImageAltIdentifiesPurpose:
+#   testability: 0
+#   title:
+#     en: "All \"input\" elements with a type of \"image\" must have an \"alt\" attribute that describes the function of the input"
+#     nl: "Elk \"invoer\"-element met een type \"afbeelding\" moet een \"alt\"-attribuut hebben dat de functie van de invoer beschrijft"
+#   description:
+#     en: "All <code>input</code> elements with a type of \"image\" should have an \"alt\" attribute."
+#     nl: "Elk \"invoer\"-element met een type \"afbeelding\" moet een \"alt\"-attribuut hebben."
+#   guidelines:
+#     wcag:
+#       1.1.1:
+#         techniques:
+#           - "H36"
+#   tags:
+#     - "form"
+#     - "content"
 inputImageAltIsNotFileName:
   testability: 1
   title:
