--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -3106,18 +3106,18 @@ newWindowIsOpened:
 #   tags:
 #     - "objects"
 #     - "content"
-noframesSectionMustHaveTextEquivalent:
-  testability: 0.5
-  title:
-    en: "All \"noframes\" elements should contain the text content from all frames"
-    nl: "Alle \"noframes\"-elementen moeten de content van alle frames bevatten"
-  description:
-    en: "The <code>noframes</code> content should either replicate or link to the content visible within the frames."
-    nl: "The <code>noframes</code>-content moet de zichtbare content binnen de frames repliceren of er naar linken."
-  guidelines: []
-  tags:
-    - "deprecated"
-    - "frame"
+# noframesSectionMustHaveTextEquivalent:
+#   testability: 0.5
+#   title:
+#     en: "All \"noframes\" elements should contain the text content from all frames"
+#     nl: "Alle \"noframes\"-elementen moeten de content van alle frames bevatten"
+#   description:
+#     en: "The <code>noframes</code> content should either replicate or link to the content visible within the frames."
+#     nl: "The <code>noframes</code>-content moet de zichtbare content binnen de frames repliceren of er naar linken."
+#   guidelines: []
+#   tags:
+#     - "deprecated"
+#     - "frame"
 objectContentUsableWhenDisabled:
   testability: 0
   title:
