Load Bower dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ test/accessibility-tests/_tests.json
 test/core/_tests.json
 analyses/*
 karma_html/*
-tmp
-logs
+tmp/*
+logs/*
 phantomjsdriver.log
+vendor/*
