--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -3384,18 +3384,18 @@ objectMustHaveValidTitle:
 #   tags:
 #     - "objects"
 #     - "content"
-objectWithClassIDHasNoText:
-  testability: 1
-  title:
-    en: "Objects with \"classid\" attributes should change their text if the content of the object changes"
-    nl: "Objecten met \"classid\"-attributen moeten hun tekst veranderen wanneer de content van het object verandert"
-  description:
-    en: "Objects with \"classid\" attributes, should have their default text change when the object's content changes."
-    nl: "Van objecten met \"classid\"-attributen moet de standaardtekst veranderen als de content van het object verandert."
-  guidelines: []
-  tags:
-    - "objects"
-    - "content"
+# objectWithClassIDHasNoText:
+#   testability: 1
+#   title:
+#     en: "Objects with \"classid\" attributes should change their text if the content of the object changes"
+#     nl: "Objecten met \"classid\"-attributen moeten hun tekst veranderen wanneer de content van het object verandert"
+#   description:
+#     en: "Objects with \"classid\" attributes, should have their default text change when the object's content changes."
+#     nl: "Van objecten met \"classid\"-attributen moet de standaardtekst veranderen als de content van het object verandert."
+#   guidelines: []
+#   tags:
+#     - "objects"
+#     - "content"
 pNotUsedAsHeader:
   testability: 0.5
   title:
