--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
   - 0.10
 
+# Use Travis' new container-based running system.
+sudo: false
+
 install:
   - npm install grunt-cli -g
   - npm install
