Knocked out ariaOrphanedContent

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -496,19 +496,18 @@ areaLinksToSoundFile:
     - "imagemap"
     - "media"
     - "content"
-ariaOrphanedContent:
-  testability: 1
-  title:
-    en: "Pages using ARIA roles should not have orphaned content"
-    nl: "Pagina's die ARIA-rollen gebruiken mogen geen verweesde content hebben"
-  description:
-    en: "If a page makes use of ARIA roles, then there should not be any content on the page which is not within an element that exposes a role, as it could cause that content to be rendreed inaccessible to users with screen readers."
-    nl: "Als een pagina gebruik maakt van ARIA-rollen, mag er geen content op de pagina staan buiten een element dat een rol vertegenwoordigt. In dat geval kan het zijn dat deze content niet toegankelijk is voor gebruikers van schermlezers."
-  guidelines: []
-  tags:
-    - "aria"
-    - "content"
-  callback: "ariaOrphanedContent"
+# ariaOrphanedContent:
+#   testability: 1
+#   title:
+#     en: "Pages using ARIA roles should not have orphaned content"
+#     nl: "Pagina's die ARIA-rollen gebruiken mogen geen verweesde content hebben"
+#   description:
+#     en: "If a page makes use of ARIA roles, then there should not be any content on the page which is not within an element that exposes a role, as it could cause that content to be rendreed inaccessible to users with screen readers."
+#     nl: "Als een pagina gebruik maakt van ARIA-rollen, mag er geen content op de pagina staan buiten een element dat een rol vertegenwoordigt. In dat geval kan het zijn dat deze content niet toegankelijk is voor gebruikers van schermlezers."
+#   guidelines: []
+#   tags:
+#     - "aria"
+#     - "content"
 audioMayBePresent:
   testability: 1
   title:
