Knocked out selectDoesNotChangeContext

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -3523,12 +3523,6 @@ scriptOnclickRequiresOnKeypress:
           - "SCR20"
   tags:
     - "javascript"
-  components:
-    - "event"
-    - "hasEventListener"
-  options:
-    correspondingEvent: "onkeypress"
-    searchEvent: "onclick"
 scriptOndblclickRequiresOnKeypress:
   type: "event"
   testability: 1
@@ -3766,24 +3760,21 @@ scriptOnmouseupHasOnkeyup:
 #   tags:
 #     - "javascript"
 #     - "color"
-selectDoesNotChangeContext:
-  type: "event"
-  testability: 1
-  title:
-    en: "\"Select\" elements must not contain an \"onchange\" attribute"
-    nl: "\"Select\" elements bevatten geen \"onchange\" attribute"
-  description:
-    en: "Actions like \"onchange\" can take control away from users who are trying to navigate the page. Using an \"onchange\" attribute for things like select-list menus should instead be replaced with a drop-down and a button which initiates the action."
-    nl: "Acties als \"onchange\" kunnen de controle ontnemen van gebruikers die op een pagina proberen te navigeren. Het gebruik van een \"onchange\"-attribuut voor zaken zoals select-list menu's moet vervangen worden door een drop-down en een knop waarmee je de actie start."
-  guidelines: []
-  tags:
-    - "form"
-    - "content"
-  components:
-    - "event"
-    - "hasEventListener"
-  options:
-    searchEvent: "onchange"
+#
+# @see https://github.com/quailjs/quail/issues/373
+# selectDoesNotChangeContext:
+#   type: "event"
+#   testability: 1
+#   title:
+#     en: "\"Select\" elements must not contain an \"onchange\" attribute"
+#     nl: "\"Select\" elements bevatten geen \"onchange\" attribute"
+#   description:
+#     en: "Actions like \"onchange\" can take control away from users who are trying to navigate the page. Using an \"onchange\" attribute for things like select-list menus should instead be replaced with a drop-down and a button which initiates the action."
+#     nl: "Acties als \"onchange\" kunnen de controle ontnemen van gebruikers die op een pagina proberen te navigeren. Het gebruik van een \"onchange\"-attribuut voor zaken zoals select-list menu's moet vervangen worden door een drop-down en een knop waarmee je de actie start."
+#   guidelines: []
+#   tags:
+#     - "form"
+#     - "content"
 selectHasAssociatedLabel:
   type: "label"
   testability: 1
