Knocked out buttonDoesNotChangeContextOnFocus

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -584,24 +584,21 @@ boldIsNotUsed:
   tags:
     - "semantics"
     - "content"
-buttonDoesNotChangeContextOnFocus:
-  type: "event"
-  testability: 1
-  title:
-    en: "Buttons must not contain an \"onfocus\" attribute"
-    nl: "Knoppen bevatten geen \"onfocus\"-attribuut"
-  description:
-    en: "Actions like \"onfocus\" can take control away from users who are trying to navigate the page. Using an \"onfocus\" attribute for things like buttons should be replaced with css."
-    nl: "Acties zoals \"onfocus\" kunnen de controle ontnemen van gebruikers die op een pagina proberen te navigeren. Het gebruik van een \"onfocus\"-attribuut voor zaken als knoppen moet worden vervangen door middel van css."
-  guidelines: []
-  tags:
-    - "form"
-    - "content"
-  components:
-    - "event"
-    - "hasEventListener"
-  options:
-    searchEvent: "onfocus"
+#
+# @see https://github.com/quailjs/quail/issues/375
+# buttonDoesNotChangeContextOnFocus:
+#   type: "event"
+#   testability: 1
+#   title:
+#     en: "Buttons must not contain an \"onfocus\" attribute"
+#     nl: "Knoppen bevatten geen \"onfocus\"-attribuut"
+#   description:
+#     en: "Actions like \"onfocus\" can take control away from users who are trying to navigate the page. Using an \"onfocus\" attribute for things like buttons should be replaced with css."
+#     nl: "Acties zoals \"onfocus\" kunnen de controle ontnemen van gebruikers die op een pagina proberen te navigeren. Het gebruik van een \"onfocus\"-attribuut voor zaken als knoppen moet worden vervangen door middel van css."
+#   guidelines: []
+#   tags:
+#     - "form"
+#     - "content"
 buttonHasName:
   type: "placeholder"
   testability: 1
@@ -3653,12 +3650,6 @@ scriptOnmouseoverHasOnfocus:
           - "SCR20"
   tags:
     - "javascript"
-  components:
-    - "event"
-    - "hasEventListener"
-  options:
-    correspondingEvent: "onfocus"
-    searchEvent: "onmouseover"
 scriptOnmouseupHasOnkeyup:
   type: "event"
   testability: 1
