--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -654,23 +654,25 @@ checkboxHasLabel:
   tags:
     - "form"
     - "content"
-closingTagsAreUsed:
-  testability: 1
-  title:
-    en: "All tags that require closing tags have closing tags"
-    nl: "Alle tags die een afsluitende tag behoeven, hebben een afsluitende tag"
-  description:
-    en: "When using tags such as p, ul, or li, there must be a closing tag."
-    nl: "Gebruik voor tags als p, ul, of li altijd een afsluitende tag, dus /p, /ul, /li."
-  guidelines:
-    wcag:
-      4.1.1:
-        techniques:
-          - "H74"
-  tags:
-    - "html"
-  components:
-    - "htmlSource"
+#
+# @see https://github.com/quailjs/quail/issues/327
+# closingTagsAreUsed:
+#   testability: 1
+#   title:
+#     en: "All tags that require closing tags have closing tags"
+#     nl: "Alle tags die een afsluitende tag behoeven, hebben een afsluitende tag"
+#   description:
+#     en: "When using tags such as p, ul, or li, there must be a closing tag."
+#     nl: "Gebruik voor tags als p, ul, of li altijd een afsluitende tag, dus /p, /ul, /li."
+#   guidelines:
+#     wcag:
+#       4.1.1:
+#         techniques:
+#           - "H74"
+#   tags:
+#     - "html"
+#   components:
+#     - "htmlSource"
 contentPositioningShouldNotChangeMeaning:
   testability: 0.5
   title:
@@ -1196,21 +1198,23 @@ elementAttributesAreValid:
     4.1.1:
       techniques:
         - "F70"
-elementsDoNotHaveDuplicateAttributes:
-  testability: 1
-  title:
-    en: "Elements should not have duplicate attributes"
-    nl: "Elementen mogen geen dubbele attributen hebben"
-  description:
-    en: "Elements should only have one type of any attribute. For example, there should not be two 'class' attributes."
-    nl: "Elementen mogen maar een type attribuut hebben. Er mogen bijvoorbeeld niet twee 'class'-attributen zijn."
-  guidelines: []
-  tags:
-    - "content"
-  components:
-    - "htmlSource"
-  libraries:
-    - "node-htmlparser/lib/htmlparser.js"
+#
+# @see https://github.com/quailjs/quail/issues/327
+# elementsDoNotHaveDuplicateAttributes:
+#   testability: 1
+#   title:
+#     en: "Elements should not have duplicate attributes"
+#     nl: "Elementen mogen geen dubbele attributen hebben"
+#   description:
+#     en: "Elements should only have one type of any attribute. For example, there should not be two 'class' attributes."
+#     nl: "Elementen mogen maar een type attribuut hebben. Er mogen bijvoorbeeld niet twee 'class'-attributen zijn."
+#   guidelines: []
+#   tags:
+#     - "content"
+#   components:
+#     - "htmlSource"
+#   libraries:
+#     - "node-htmlparser/lib/htmlparser.js"
 embedHasAssociatedNoEmbed:
   testability: 1
   title:
@@ -3943,23 +3947,25 @@ tableWithMoreHeadersUseID:
   tags:
     - "table"
     - "content"
-tagsAreNestedCorrectly:
-  testability: 1
-  title:
-    en: "All tags should be nested correctly"
-    nl: "Alle tags moeten juist genest worden"
-  description:
-    en: ""
-    nl: ""
-  guidelines:
-    wcag:
-      4.1.1:
-        techniques:
-          - "H74"
-  tags:
-    - "html"
-  components:
-      - "htmlSource"
+#
+# @see https://github.com/quailjs/quail/issues/327
+# tagsAreNestedCorrectly:
+#   testability: 1
+#   title:
+#     en: "All tags should be nested correctly"
+#     nl: "Alle tags moeten juist genest worden"
+#   description:
+#     en: ""
+#     nl: ""
+#   guidelines:
+#     wcag:
+#       4.1.1:
+#         techniques:
+#           - "H74"
+#   tags:
+#     - "html"
+#   components:
+#       - "htmlSource"
 tabularDataIsInTable:
   testability: 0.5
   title:
