Knocked out elementAttributesAreValid

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -1186,18 +1186,20 @@ domOrderMatchesVisualOrder:
           - "C27"
   tags:
     - "content"
-elementAttributesAreValid:
-  testability: 1
-  title:
-    en: "Attributes should have spaces between them and be wrapped in quotes"
-    nl: "Attributen moeten gescheiden zijn door spaties en ze moeten tussen aanhalingstekens"
-  description:
-    en: "Attributes should have spaces between them and be wrapped in quotes."
-    nl: "Tussen attributen moeten spaties staan en ze moeten tussen aanhalingstekens staan."
-  guidelines:
-    4.1.1:
-      techniques:
-        - "F70"
+#
+# @see https://github.com/quailjs/quail/issues/327
+# elementAttributesAreValid:
+#   testability: 1
+#   title:
+#     en: "Attributes should have spaces between them and be wrapped in quotes"
+#     nl: "Attributen moeten gescheiden zijn door spaties en ze moeten tussen aanhalingstekens"
+#   description:
+#     en: "Attributes should have spaces between them and be wrapped in quotes."
+#     nl: "Tussen attributen moeten spaties staan en ze moeten tussen aanhalingstekens staan."
+#   guidelines:
+#     4.1.1:
+#       techniques:
+#         - "F70"
 #
 # @see https://github.com/quailjs/quail/issues/327
 # elementsDoNotHaveDuplicateAttributes:
